tests/scripts/type_errors/overriding_builtin.roto
struct u32 { b: u32 }

fn foo() {}
